--- a/views/add_stage_form.erb
+++ b/views/add_stage_form.erb
@@ -7,7 +7,7 @@
     
 <form action="/add_stage"> 
     Additional status stage:
-      <input type="text" placeholder="lost the cd" name="type"></br></br>
+      <input type="text" placeholder="lost the cd" name="stage"></br></br>
       <input type="submit">
       
 </form>
