--- a/views/filter_stage_form.erb
+++ b/views/filter_stage_form.erb
@@ -1,4 +1,4 @@
-<form action="/save_status_stage_filter">
+<form action="/save_stage_filter">
 <h3>What status stage would you like to see a song list for?</h3>
 <label for="status">Status stage options are</label>
     <select id="status" name="stage">
