--- a/views/filter_type_form.erb
+++ b/views/filter_type_form.erb
@@ -1,4 +1,4 @@
-<form action="/save_genre_type_filter">
+<form action="/save_type_filter">
 <h3>What genre type would you like to see a list of songs for?</h3>
 <label for="genre">genre type options are</label>
     <select id="genre" name="type">
