--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -19,4 +19,10 @@
   <li><a href="/view_same/type">all songs with same genre</a></li>
   <li><a href="/view_same/stage">all songs with the same status stage</a></li>
 </ul>
+
+<ul><b>Delete</b>
+  <li><a href="/delete/song">a song record</a></li>
+  <li><a href="/delete/type">genre type</a></li>
+  <li><a href="/delete/stage">status stage</a></li>
+</ul>
 </div>
