--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -1,4 +1,5 @@
 <h1> Welcome to the Song Inventory Database</h1>
+<h3>Old navigation system </h3>
 <div style="display:inline-flex";>
 <ul><b>Add</b>
   <li><a href="/add/type">genre type</a></li>
@@ -7,6 +8,8 @@
 </ul>
 
 <ul><b>Edit</b>
+  <li><a href="/edit/complete_record">Complete song record</a></li>
+  
   <li><a href="/edit/title">a title of a song</a></li>
   <li><a href="/edit/artist">the artist of a song</a></li>
   <li><a href="/edit/genre">the genre type of a song</a></li>
